Add 'rules' command and enhance error messages - v1.7.2
NEW FEATURES:
- Added 'rules' built-in command to show sudo rules and sources
  * Displays detailed sudo privileges for current user
  * Shows direct sudoers rules with source file attribution
  * Includes group-based privileges and system-wide rules
  * Provides same information as 'sudo -l' from within sudosh
  * Integrated into help system and command listings

ENHANCED ERROR MESSAGES:
- Improved I/O redirection error messages
  * Explains security risks of redirection operators
  * Details how redirects can overwrite critical files
  * Warns about privilege escalation vectors
  * Suggests safer alternatives

- Enhanced pipe error messages
  * Explains risks of command chaining
  * Details security bypass potential
  * Warns about command injection attacks
  * Suggests individual command execution

IMPLEMENTATION DETAILS:
- Added 'rules' command handler in utils.c
- Enhanced validate_command() in security.c
- Moved redirect check before metacharacter check for proper error messages
- Updated help system and man page documentation
- Added comprehensive test suite (test_rules_command.c)

DOCUMENTATION:
- Updated README with new features and examples
- Enhanced man page with 'rules' command details
- Updated help text and command listings
- Added changelog entry for v1.7.2

TESTING:
✅ All existing tests pass
✅ New rules command test passes
✅ Enhanced error message validation passes
✅ Zero functional regressions

This release improves user experience with better visibility into
sudo permissions and more informative security error messages.

--- a/src/sudosh.1.in
+++ b/src/sudosh.1.in
@@ -84,6 +84,9 @@ Show available commands and usage examples. Both \fBhelp\fR and \fB?\fR display 
 .B commands
 List all available commands, including built-in commands and system commands found in PATH.
 .TP
+.B rules
+Show detailed sudo rules and their sources for the current user. Displays the same information as \fBsudosh -l\fR but from within the interactive shell. Shows direct sudoers rules, group-based privileges, and system-wide group rules with source file attribution.
+.TP
 .B history
 Show numbered command history from ~/.sudosh_history. Use with !<number> to execute previous commands.
 .TP
@@ -112,6 +115,7 @@ sudosh:/home/user# apt update && apt upgrade
 sudosh:/home/user# cd /var/log
 sudosh:/var/log# pwd
 sudosh:/var/log# commands
+sudosh:/var/log# rules
 sudosh:/var/log# help
 sudosh:/var/log# exit
 .fi
